Update log phrasing to be consistent